# ComfyUI-CCXManager

./: LICENSE  README.md  README_ZH.md  SDPPP插件更新助手.json  __init__.py  auto_updater_node.py  ccx_downloader_node.py  ccx_manager_node.py  config.json  config_copy.json  local_proxy.py  metadata.json  node_version_manager.py  pyproject.toml  updater_config.json
py/: lgutils.py  trans.py
web/: groupexecutor.js  groupexecutorUI.js  groupexecutorqueuemanager.js  groupexecutorsender.js  queue_utils.js
workflows/: SD-PPP plugin update assistant - supports PS operation.json  SD-PPP一键下载自动更新 .json  SD-PPP一键降级.json  SD-PPP插件更新助手-支持PS操作.json
