[project]
name = "comfyui-ccxmanager"
description = "Set it to run once, and if there are updates in SD-PPP (Photoshop side and Comfyui side), it will automatically synchronize the updates for you, completely eliminating the need to manually update plugins and nodes."

version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["requests>=2.25.0"]

[project.urls]
Repository = "https://github.com/WWWEN8/ComfyUI-CCXManager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "WWWEN8"
DisplayName = "comfyui-ccxmanager"
Icon = ""



